Revert "Updated dependencies"
This reverts commit 75780c9000204bc0a74e225368721f7ed6a755e5.